--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </h2>
     <ul>
         <li>
-            August 2020 - June 2023, Master in Computer Technology, Tsinghua University
+            August 2020 - June 2023, Master of Computer Technology, Tsinghua University
         </li>
         <li>
-            August 2016 - June 2020, Bachelor in Computer Science and Technology, Xi'an Jiaotong University
+            August 2016 - June 2020, Bachelor of Computer Science and Technology, Xi'an Jiaotong University
         </li>
     </ul>
 
