--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>
         <A href="mailto:xuxianghong12@qq.com">[Email]</A>
         <A href="https://scholar.google.com/citations?user=Y659COsAAAAJ&hl">[Google Scholar]</A>
-        <A href="https://orcid.org/my-orcid?orcid=0000-0003-2447-4107">[ORCID]</A>
+        <A href="https://orcid.org/0000-0003-2447-4107">[ORCID]</A>
     </p>
 
     <h2>
