--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Xianghong Xu</title>
-        <LINK href="src/style.css" rel="stylesheet" type="text/css">
+        <LINK href="css/style.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
     <div id="layout-content">
 
         <h1>Xianghong Xu</h1>
-    </body>
+    
     <p>
         I currently work at ByteDance, focusing on artificial intelligence for data systems.
 
@@ -50,52 +50,82 @@
     <header>
         * indicates equal contributions. 
     </header>
-    <ol class="custom-ol">
-        <li>
-            [VLDB'23 Workshop] COOOL: A Learning-To-Rank Approach for SQL Hint Recommendations
-            <br> <strong>Xianghong Xu</strong>, Zhibing Zhao, Tieying Zhang, Rong Kang, Luming Sun, Jianjun Chen
+    <div>
+        <a id="sortByYear" class="sort-link" data-sort="year" onclick="sortPapers('year')">[Sort by year]</a>
+        <a id="sortByAuthor" class="sort-link" data-sort="author" onclick="sortPapers('author')">[Sort by authorship]</a>
+    </div>
+    <ol id="paperList">
+
+        <li class="paper" data-year="2025" data-author=1>
+            <div class="title">PLM4NDV: Minimizing Data Access for Number of Distinct Values Estimation with Pre-trained Language Models</div>
+            <div class="author"><strong>Xianghong Xu</strong>, Xiao He, Tieying Zhang, Lei Zhang, Rui Shi, Jianjun Chen</div>
+            <div class="conference">SIGMOD 2025</div>
+        </li>
+
+        <li class="paper" data-year="2025" data-author=1>
+            <div class="title">AdaNDV: Adaptive Number of Distinct Value Estimation via Learning to Select and Fuse Estimators</div>
+            <div class="author"><strong>Xianghong Xu</strong>, Tieying Zhang, Xiao He, Haoyang Li, Rong Kang, Shuai Wang, Linhui Xu, Zhimin Liang, Shangyu Luo, Lei Zhang, Jianjun Chen</div>
+            <div class="conference">VLDB 2025</div>
+        </li>
+
+        <li class="paper" data-year="2023" data-author=1>
+            <div class="title">COOOL: A Learning-To-Rank Approach for SQL Hint Recommendations</div>
+            <div class="author"><strong>Xianghong Xu</strong>, Zhibing Zhao, Tieying Zhang, Rong Kang, Luming Sun, Jianjun Chen</div>
+            <div class="conference">VLDB 2023 Workshop</div>
         </li>
         
-        <li>
-            [ECAI'23] Rethinking Temporal Information in Session-Based Recommendation: A Position-Agnostic Approach
-            <br> <strong>Xianghong Xu*</strong>, Kai Ouyang*, Jiaxin Zou, Hai-Tao Zheng, Wenqiang Liu, Dongxiao Huang, Bei Wu
+        <li class="paper" data-year="2023" data-author=1.1>
+            <div class="title">Rethinking Temporal Information in Session-Based Recommendation: A Position-Agnostic Approach</div>
+            <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Jiaxin Zou, Hai-Tao Zheng, Wenqiang Liu, Dongxiao Huang, Bei Wu</div>
+            <div class="conference">ECAI 2023</div>
         </li>
 
-        <li>
-            [SIGIR'23] Mining Interest Trends and Adaptively Assigning Sample Weight for Session-based Recommendation
-            <br> Kai Ouyang*, <strong>Xianghong Xu*</strong>, Miaoxin Chen, Zuotong Xie, Hai-Tao Zheng, Shuangyong Song, Yu Zhao
-        </li>
-        <li>
-            [IJCNN'23] Self-supervised Bidirectional Prompt Tuning for Entity-enhanced Pre-trained Language Model
-            <br> Jiaxin Zou, <strong>Xianghong Xu</strong>, Jiawei Hou, Qiang Yan, Hai-Tao Zheng
+        <li class="paper" data-year="2023" data-author=1.2>
+            <div class="title">Mining Interest Trends and Adaptively Assigning Sample Weight for Session-based Recommendation</div>
+            <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Miaoxin Chen, Zuotong Xie, Hai-Tao Zheng, Shuangyong Song, Yu Zhao</div>
+            <div class="conference">SIGIR 2023</div>
         </li>
 
-        <li>
-            [IJCNN'23] Modeling Global-Local Subtopic Distribution with Hypergraph to Diversify Search Results
-            <br> Kai Ouyang*, <strong>Xianghong Xu*</strong>, Zuotong Xie, Hai-Tao Zheng, Yanxiong Lu
+        <li class="paper" data-year="2023" data-author=2>
+            <div class="title">Self-supervised Bidirectional Prompt Tuning for Entity-enhanced Pre-trained Language Model</div>
+            <div class="author">Jiaxin Zou, <strong>Xianghong Xu</strong>, Jiawei Hou, Qiang Yan, Hai-Tao Zheng</div>
+            <div class="conference">IJCNN 2023</div>
         </li>
 
-        <li>
-            [EMNLP'22] Social-aware Sparse Attention Network for Session-based Social Recommendation
-            <br> Kai Ouyang*, <strong>Xianghong Xu*</strong>, Chen Tang, Wang Chen, Hai-Tao Zheng
+        <li class="paper" data-year="2023" data-author=1.2>
+            <div class="title">Modeling Global-Local Subtopic Distribution with Hypergraph to Diversify Search Results</div>
+            <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Zuotong Xie, Hai-Tao Zheng, Yanxiong Lu</div>
+            <div class="conference">IJCNN 2023</div>
         </li>
 
-        <li>
-            [CIKM'22] Modeling Latent Autocorrelation for Session-based Recommendation
-            <br> <strong>Xianghong Xu*</strong>, Kai Ouyang*, Liuyin Wang, Jiaxin Zou, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim
+        <li class="paper" data-year="2022" data-author=1.2>
+            <div class="title">Social-aware Sparse Attention Network for Session-based Social Recommendation</div>
+            <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Chen Tang, Wang Chen, Hai-Tao Zheng</div>
+            <div class="conference">EMNLP 2022</div>
         </li>
 
-        <li>
-            [ICDE'22] Self-Supervised Dual-Channel Attentive Network for Session-based Social Recommendation
-            <br> Liuyin Wang*, <strong>Xianghong Xu*</strong>, Kai Ouyang, Huanzhong Duan, Yanxiong Lu, Hai-Tao Zheng
+        <li class="paper" data-year="2022" data-author=1.1>
+            <div class="title">Modeling Latent Autocorrelation for Session-based Recommendation</div>
+            <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Liuyin Wang, Jiaxin Zou, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim</div>
+            <div class="conference">CIKM 2022</div>
         </li>
 
-        <li>
-            [DASFAA'22] Diversify Search Results Through Graph Attentive Document Interaction
-            <br> <strong>Xianghong Xu*</strong>, Kai Ouyang*, Yin Zheng, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim
+        <li class="paper" data-year="2022" data-author=1.2>
+            <div class="title">Self-Supervised Dual-Channel Attentive Network for Session-based Social Recommendation</div>
+            <div class="author">Liuyin Wang*, <strong>Xianghong Xu*</strong>, Kai Ouyang, Huanzhong Duan, Yanxiong Lu, Hai-Tao Zheng</div>
+            <div class="conference">ICDE 2022</div>
+        </li>
+
+        <li class="paper" data-year="2022" data-author=1.1>
+            <div class="title">Diversify Search Results Through Graph Attentive Document Interaction </div>
+            <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Yin Zheng, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim</div>
+            <div class="conference">DASFAA 2022</div>
         </li>
     </ol>
 
 
 </div></div>
+
+<script src="js/dynamic.js" defer></script>
+</body>
 </html>
