add paper links and update types

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <p>
         <A href="mailto:xuxianghong12@qq.com">[Email]</A>
-        <A href="https://scholar.google.com/citations?user=Y659COsAAAAJ&hl">[Google Scholar]</A>
-        <A href="https://orcid.org/0000-0003-2447-4107">[ORCID]</A>
+        <A href="https://scholar.google.com/citations?user=Y659COsAAAAJ&hl"  target="_blank" rel="noopener noreferrer">[Google Scholar]</A>
+        <A href="https://orcid.org/0000-0003-2447-4107" target="_blank" rel="noopener noreferrer">[ORCID]</A>
     </p>
 
     <h2>
@@ -56,70 +56,112 @@
     </div>
     <ol id="paperList">
 
+        <li class="paper" data-year="2025" data-author=4>
+            <div class="title">VIDEX: A Disaggregated and Extensible Virtual Index for the Cloud and AI Era</div>
+            <div class="author">Rong Kang, Shuai Wang, Tieying Zhang, <strong>Xianghong Xu</strong>, Linhui Xu, Zhimin Liang, Lei Zhang, Rui Shi, Jianjun Chen</div>
+            <div class="conference">VLDB 2025 Demo</div>
+            <a href="https://arxiv.org/abs/2503.23776" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
+        </li>
+
         <li class="paper" data-year="2025" data-author=1>
             <div class="title">PLM4NDV: Minimizing Data Access for Number of Distinct Values Estimation with Pre-trained Language Models</div>
             <div class="author"><strong>Xianghong Xu</strong>, Xiao He, Tieying Zhang, Lei Zhang, Rui Shi, Jianjun Chen</div>
             <div class="conference">SIGMOD 2025</div>
+            <a href="https://arxiv.org/abs/2504.00608" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2025" data-author=1>
             <div class="title">AdaNDV: Adaptive Number of Distinct Value Estimation via Learning to Select and Fuse Estimators</div>
             <div class="author"><strong>Xianghong Xu</strong>, Tieying Zhang, Xiao He, Haoyang Li, Rong Kang, Shuai Wang, Linhui Xu, Zhimin Liang, Shangyu Luo, Lei Zhang, Jianjun Chen</div>
             <div class="conference">VLDB 2025</div>
+            <a href="https://arxiv.org/abs/2502.16190" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2023" data-author=1>
             <div class="title">COOOL: A Learning-To-Rank Approach for SQL Hint Recommendations</div>
             <div class="author"><strong>Xianghong Xu</strong>, Zhibing Zhao, Tieying Zhang, Rong Kang, Luming Sun, Jianjun Chen</div>
             <div class="conference">VLDB 2023 Workshop</div>
+            <a href="https://arxiv.org/abs/2304.04407" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
         
         <li class="paper" data-year="2023" data-author=1.1>
             <div class="title">Rethinking Temporal Information in Session-Based Recommendation: A Position-Agnostic Approach</div>
             <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Jiaxin Zou, Hai-Tao Zheng, Wenqiang Liu, Dongxiao Huang, Bei Wu</div>
             <div class="conference">ECAI 2023</div>
+            <a href="https://ebooks.iospress.nl/doi/10.3233/FAIA230592" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2023" data-author=1.2>
             <div class="title">Mining Interest Trends and Adaptively Assigning Sample Weight for Session-based Recommendation</div>
             <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Miaoxin Chen, Zuotong Xie, Hai-Tao Zheng, Shuangyong Song, Yu Zhao</div>
-            <div class="conference">SIGIR 2023</div>
+            <div class="conference">SIGIR 2023 Short</div>
+            <a href="https://dl.acm.org/doi/abs/10.1145/3539618.3592021" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2023" data-author=2>
             <div class="title">Self-supervised Bidirectional Prompt Tuning for Entity-enhanced Pre-trained Language Model</div>
             <div class="author">Jiaxin Zou, <strong>Xianghong Xu</strong>, Jiawei Hou, Qiang Yan, Hai-Tao Zheng</div>
             <div class="conference">IJCNN 2023</div>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10192045" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2023" data-author=1.2>
             <div class="title">Modeling Global-Local Subtopic Distribution with Hypergraph to Diversify Search Results</div>
             <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Zuotong Xie, Hai-Tao Zheng, Yanxiong Lu</div>
             <div class="conference">IJCNN 2023</div>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10191529" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2022" data-author=1.2>
             <div class="title">Social-aware Sparse Attention Network for Session-based Social Recommendation</div>
             <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Chen Tang, Wang Chen, Hai-Tao Zheng</div>
-            <div class="conference">EMNLP 2022</div>
+            <div class="conference">EMNLP 2022 Findings</div>
+            <a href="https://aclanthology.org/2022.findings-emnlp.159/" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2022" data-author=1.1>
             <div class="title">Modeling Latent Autocorrelation for Session-based Recommendation</div>
             <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Liuyin Wang, Jiaxin Zou, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim</div>
-            <div class="conference">CIKM 2022</div>
+            <div class="conference">CIKM 2022 Short</div>
+            <a href="https://dl.acm.org/doi/abs/10.1145/3511808.3557645" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2022" data-author=1.2>
             <div class="title">Self-Supervised Dual-Channel Attentive Network for Session-based Social Recommendation</div>
             <div class="author">Liuyin Wang*, <strong>Xianghong Xu*</strong>, Kai Ouyang, Huanzhong Duan, Yanxiong Lu, Hai-Tao Zheng</div>
             <div class="conference">ICDE 2022</div>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9835273" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
 
         <li class="paper" data-year="2022" data-author=1.1>
             <div class="title">Diversify Search Results Through Graph Attentive Document Interaction </div>
             <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Yin Zheng, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim</div>
             <div class="conference">DASFAA 2022</div>
+            <a href="https://link.springer.com/chapter/10.1007/978-3-031-00123-9_51" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
         </li>
     </ol>
 
