add sort by topic, polish

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
     <div>
         <a id="sortByYear" class="sort-link" data-sort="year" onclick="sortPapers('year')">[Sort by year]</a>
         <a id="sortByAuthor" class="sort-link" data-sort="author" onclick="sortPapers('author')">[Sort by authorship]</a>
+        <a id="sortByProject" class="sort-link" data-sort="project" onclick="sortPapers('project')">[Sort by topic]</a>
     </div>
     <ol id="paperList">
 
-        <li class="paper" data-year="2025" data-author=4>
+        <li class="paper" data-year="2025" data-author=4 data-project="ai4db">
             <div class="title">VIDEX: A Disaggregated and Extensible Virtual Index for the Cloud and AI Era</div>
             <div class="author">Rong Kang, Shuai Wang, Tieying Zhang, <strong>Xianghong Xu</strong>, Linhui Xu, Zhimin Liang, Lei Zhang, Rui Shi, Jianjun Chen</div>
             <div class="conference">VLDB 2025 Demo</div>
@@ -65,7 +66,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2025" data-author=1>
+        <li class="paper" data-year="2025" data-author=1 data-project="ai4db">
             <div class="title">PLM4NDV: Minimizing Data Access for Number of Distinct Values Estimation with Pre-trained Language Models</div>
             <div class="author"><strong>Xianghong Xu</strong>, Xiao He, Tieying Zhang, Lei Zhang, Rui Shi, Jianjun Chen</div>
             <div class="conference">SIGMOD 2025</div>
@@ -74,7 +75,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2025" data-author=1>
+        <li class="paper" data-year="2025" data-author=1 data-project="ai4db">
             <div class="title">AdaNDV: Adaptive Number of Distinct Value Estimation via Learning to Select and Fuse Estimators</div>
             <div class="author"><strong>Xianghong Xu</strong>, Tieying Zhang, Xiao He, Haoyang Li, Rong Kang, Shuai Wang, Linhui Xu, Zhimin Liang, Shangyu Luo, Lei Zhang, Jianjun Chen</div>
             <div class="conference">VLDB 2025</div>
@@ -83,7 +84,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2023" data-author=1>
+        <li class="paper" data-year="2023" data-author=1 data-project="ai4db">
             <div class="title">COOOL: A Learning-To-Rank Approach for SQL Hint Recommendations</div>
             <div class="author"><strong>Xianghong Xu</strong>, Zhibing Zhao, Tieying Zhang, Rong Kang, Luming Sun, Jianjun Chen</div>
             <div class="conference">VLDB 2023 Workshop</div>
@@ -92,7 +93,16 @@
             </a>
         </li>
         
-        <li class="paper" data-year="2023" data-author=1.1>
+        <li class="paper" data-year="2023" data-author=2 data-project="plm">
+            <div class="title">Self-supervised Bidirectional Prompt Tuning for Entity-enhanced Pre-trained Language Model</div>
+            <div class="author">Jiaxin Zou, <strong>Xianghong Xu</strong>, Jiawei Hou, Qiang Yan, Hai-Tao Zheng</div>
+            <div class="conference">IJCNN 2023</div>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10192045" class="paper-link" target="_blank" rel="noopener noreferrer">
+                [paper]
+            </a>
+        </li>
+        
+        <li class="paper" data-year="2023" data-author=1.1  data-project="recommendation">
             <div class="title">Rethinking Temporal Information in Session-Based Recommendation: A Position-Agnostic Approach</div>
             <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Jiaxin Zou, Hai-Tao Zheng, Wenqiang Liu, Dongxiao Huang, Bei Wu</div>
             <div class="conference">ECAI 2023</div>
@@ -101,7 +111,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2023" data-author=1.2>
+        <li class="paper" data-year="2023" data-author=1.2 data-project="recommendation">
             <div class="title">Mining Interest Trends and Adaptively Assigning Sample Weight for Session-based Recommendation</div>
             <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Miaoxin Chen, Zuotong Xie, Hai-Tao Zheng, Shuangyong Song, Yu Zhao</div>
             <div class="conference">SIGIR 2023 Short</div>
@@ -110,16 +120,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2023" data-author=2>
-            <div class="title">Self-supervised Bidirectional Prompt Tuning for Entity-enhanced Pre-trained Language Model</div>
-            <div class="author">Jiaxin Zou, <strong>Xianghong Xu</strong>, Jiawei Hou, Qiang Yan, Hai-Tao Zheng</div>
-            <div class="conference">IJCNN 2023</div>
-            <a href="https://ieeexplore.ieee.org/abstract/document/10192045" class="paper-link" target="_blank" rel="noopener noreferrer">
-                [paper]
-            </a>
-        </li>
-
-        <li class="paper" data-year="2023" data-author=1.2>
+        <li class="paper" data-year="2023" data-author=1.2 data-project="IR">
             <div class="title">Modeling Global-Local Subtopic Distribution with Hypergraph to Diversify Search Results</div>
             <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Zuotong Xie, Hai-Tao Zheng, Yanxiong Lu</div>
             <div class="conference">IJCNN 2023</div>
@@ -128,7 +129,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2022" data-author=1.2>
+        <li class="paper" data-year="2022" data-author=1.2 data-project="recommendation">
             <div class="title">Social-aware Sparse Attention Network for Session-based Social Recommendation</div>
             <div class="author">Kai Ouyang*, <strong>Xianghong Xu*</strong>, Chen Tang, Wang Chen, Hai-Tao Zheng</div>
             <div class="conference">EMNLP 2022 Findings</div>
@@ -137,7 +138,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2022" data-author=1.1>
+        <li class="paper" data-year="2022" data-author=1.1 data-project="recommendation">
             <div class="title">Modeling Latent Autocorrelation for Session-based Recommendation</div>
             <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Liuyin Wang, Jiaxin Zou, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim</div>
             <div class="conference">CIKM 2022 Short</div>
@@ -146,7 +147,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2022" data-author=1.2>
+        <li class="paper" data-year="2022" data-author=1.2 data-project="recommendation">
             <div class="title">Self-Supervised Dual-Channel Attentive Network for Session-based Social Recommendation</div>
             <div class="author">Liuyin Wang*, <strong>Xianghong Xu*</strong>, Kai Ouyang, Huanzhong Duan, Yanxiong Lu, Hai-Tao Zheng</div>
             <div class="conference">ICDE 2022</div>
@@ -155,7 +156,7 @@
             </a>
         </li>
 
-        <li class="paper" data-year="2022" data-author=1.1>
+        <li class="paper" data-year="2022" data-author=1.1 data-project="IR">
             <div class="title">Diversify Search Results Through Graph Attentive Document Interaction </div>
             <div class="author"><strong>Xianghong Xu*</strong>, Kai Ouyang*, Yin Zheng, Yanxiong Lu, Hai-Tao Zheng, Hong-Gee Kim</div>
             <div class="conference">DASFAA 2022</div>
