--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <title>Xianghong Xu</title>
         <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <LINK href="css/style.css" rel="stylesheet" type="text/css">
+        <LINK href="css/style.css?v=1.0" rel="stylesheet" type="text/css">
     </head>
 
     <body>
